tests/testcases/invalid/08_unrecognized_operator.ciel
int main() {
    int x = 1 $$$ 2; // invalid operator sequence
    return 0;
}
